# open_mower_ros

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  blp_plugin.xml  docker-bake.hcl  package.xml  test_run.bash
HoverMower_wrapper/: CMakeLists.txt  package.xml
HoverMower_wrapper/src/: HoverMower_wrapper.cpp
devenv/: .env  (+5 more)
mower_area_recorder/: CMakeLists.txt  README.md  package.xml
mower_area_recorder/src/: area_recorder.cpp
mower_comms/: CMakeLists.txt  CMakeLists_x.txt  package.xml
mower_comms/src/: ll_datatypes.h  mower_comms.cpp
src/mower_analytics/: CMakeLists.txt  package.xml
src/mower_analytics/include/mower_analytics/: sentry_guard.h
src/mower_analytics/src/: sentry_guard.cpp
src/mower_comms_v1/: CMakeLists.txt  package.xml
src/mower_comms_v1/cfg/: StallBreaker.cfg
src/mower_comms_v1/src/: COBS.h  ll_datatypes.h  mower_comms.cpp  stall_breaker.h
src/mower_comms_v1/test/: test_stall_breaker.cpp
src/mower_comms_v2/: CMakeLists.txt  package.xml
src/mower_comms_v2/lib/libfyaml/: CMakeLists.txt
src/mower_comms_v2/src/: BmsServiceInterface.cpp  BmsServiceInterface.h  DiffDriveServiceInterface.cpp  DiffDriveServiceInterface.h  DockingSensorServiceInterface.cpp  DockingSensorServiceInterface.h  EmergencyServiceInterface.cpp  EmergencyServiceInterface.h  GpsPositionServiceInterface.cpp  GpsPositionServiceInterface.h  GpsServiceInterface.cpp  GpsServiceInterface.h  HighLevelServiceInterface.cpp  HighLevelServiceInterface.h  ImuServiceInterface.cpp  ImuServiceInterface.h  InputServiceInterface.cpp  InputServiceInterface.h  LidarServiceInterface.cpp  LidarServiceInterface.h  MowerServiceInterface.cpp  MowerServiceInterface.h  PowerServiceInterface.cpp  PowerServiceInterface.h  mower_comms.cpp
src/mower_logic/: CMakeLists.txt  package.xml
src/mower_logic/cfg/: BladeSpeedAdapter.cfg  MowerLogic.cfg  MowerOdometry.cfg  Power.cfg  Tasklist.cfg
src/mower_logic/include/: utils.h
src/mower_logic/include/mower_logic/: utils.h
src/mower_logic/msg/: CheckPoint.msg
src/mower_logic/src/blade_speed_adapter/: blade_speed_adapter.cpp
src/mower_logic/src/hardware_test/: hardware_test.cpp
src/mower_logic/test/: blade_speed_adapter.test  blade_speed_adapter_csv_replay.test  grass_map.py  motor_model.py  plot_replay.py  sim_clock.py  sim_startup.test  supervised_mode.test  test_blade_speed_adapter.py  test_csv_replay.py  test_sim_startup.py  test_supervised_mode.py
src/mower_map/: CMakeLists.txt  package.xml
src/mower_map/msg/: MapArea.msg  MapAreaLegacy.msg  MapAreas.msg
src/mower_map/src/: mower_map_service.cpp
src/mower_map/srv/: AddMowingAreaSrv.srv  AppendMapSrv.srv  ConvertToNavigationAreaSrv.srv  GetDockingPointSrv.srv  GetMowingAreaSrv.srv  SetDockingPointSrv.srv  SetNavPointSrv.srv
src/mower_msgs/: CMakeLists.txt  package.xml
src/mower_msgs/action/: MowPaths.action
src/mower_msgs/msg/: Bms.msg  DockingSensor.msg  ESCStatus.msg  Emergency.msg  HighLevelStatus.msg  ImuRaw.msg  Perimeter.msg  Power.msg  Status.msg
src/mower_msgs/srv/: EmergencyStopSrv.srv  GPSControlSrv.srv  HighLevelControlSrv.srv  MowerControlSrv.srv  PerimeterControlSrv.srv  StartInAreaSrv.srv
vesc/: CMakeLists.txt  package.xml
vesc_ackermann/: CMakeLists.txt  package.xml  vesc_ackermann_nodelet.xml
vesc_ackermann/include/vesc_ackermann/: ackermann_to_vesc.h  vesc_to_odom.h
vesc_ackermann/launch/: ackermann_to_vesc_node.launch  ackermann_to_vesc_nodelet.launch  vesc_to_odom_node.launch  vesc_to_odom_nodelet.launch
vesc_ackermann/src/: ackermann_to_vesc.cpp  ackermann_to_vesc_node.cpp  ackermann_to_vesc_nodelet.cpp  vesc_to_odom.cpp  vesc_to_odom_node.cpp  vesc_to_odom_nodelet.cpp
vesc_driver/: CMakeLists.txt  package.xml  vesc_driver_nodelet.xml
vesc_driver/include/vesc_driver/: data_map.h  datatypes.h  vesc_driver.h  vesc_interface.h  vesc_packet.h  vesc_packet_factory.h
vesc_driver/launch/: vesc_driver_node.launch  vesc_driver_nodelet.launch
vesc_driver/src/: vesc_driver.cpp  vesc_driver.h  vesc_driver_node.cpp  vesc_driver_nodelet.cpp  vesc_interface.cpp  vesc_packet.cpp  vesc_packet_factory.cpp
vesc_hi/: CMakeLists.txt  package.xml  vesc_hi_plugin.xml
vesc_hi/include/: datatypes.h  vesc_driver.h  vesc_interface.h  vesc_packet.h  vesc_packet_factory.h
vesc_hi/include/vesc_hi/: vesc_driver.h  vesc_hi.h  vesc_interface.h  vesc_packet.h  vesc_packet_factory.h  vesc_servo_controller.h
vesc_hi/src/: vesc_driver.cpp  vesc_hi.cpp  vesc_hi_node.cpp  vesc_interface.cpp  vesc_packet.cpp  vesc_packet_factory.cpp  vesc_servo_controller.cpp
vesc_hw_interface/: CMakeLists.txt  README.md  package.xml  vesc_hw_interface_plugin.xml
vesc_hw_interface/include/vesc_hw_interface/: vesc_hw_interface.h  vesc_servo_controller.h
vesc_hw_interface/launch/: effort_control_sample.launch  position_control_sample.launch  test.xacro  velocity_control_sample.launch
vesc_hw_interface/src/: vesc_hw_interface.cpp  vesc_hw_interface_node.cpp  vesc_servo_controller.cpp
vesc_msgs/: CMakeLists.txt  package.xml
vesc_msgs/msg/: VescState.msg  VescStateStamped.msg  VescTelemetry.msg
xesc/: CMakeLists.txt  package.xml
xesc/include/xesc_driver/: xesc_driver.h
xesc/include/xesc_driver_interface/: xesc_driver_interface.h
xesc_2040_driver/: CMakeLists.txt  package.xml
xesc_2040_driver/include/xesc_2040_driver/: xesc_2040_datatypes.h  xesc_2040_driver.h  xesc_2040_interface.h
xesc_2040_driver/src/: xesc_2040_driver.cpp  xesc_2040_driver_node.cpp  xesc_2040_interface.cpp
xesc_driver/: CMakeLists.txt  package.xml
xesc_driver/include/xesc_driver/: xesc_driver.h
xesc_driver/src/: xesc_driver.cpp  xesc_driver_node.cpp
xesc_interface/: package.xml
xesc_interface/include/xesc_interface/: xesc_interface.h
xesc_msgs/: package.xml
xesc_msgs/msg/: XescState.msg  XescStateStamped.msg
xesc_yfr4_driver/: package.xml
xesc_yfr4_driver/include/xesc_yfr4_driver/: xesc_yfr4_datatypes.h  xesc_yfr4_interface.h
xesc_yfr4_driver/src/: xesc_yfr4_driver.cpp  xesc_yfr4_interface.cpp
(+418 files in other folders)
