<?xml version="1.0"?>
<package format="2">
  <name>xbot_positioning</name>
  <version>0.0.0</version>
  <description>The xbot_positioning package</description>
  <maintainer email="clemens.elflein@googlemail.com">Clemens Elflein</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/ClemensElflein</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xbot_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <depend>geometry_msgs</depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>xbot_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>xbot_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
