<?xml version="1.0"?>
<package format="2">
  <name>hovermower_wrapper</name>
  <version>0.0.0</version>
  <description>Wrapper to map HoverMower messages to OpenMower messages</description>
  <maintainer email="paddy-daun@web.de">Patrick Weber</maintainer>
  <license>CC BY-NC-SA 4.0</license>

  <url type="website">https://github.com/HoverMower/open_mower_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mower_msgs</build_depend>
  <build_depend>rosmower_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>mower_msgs</exec_depend>
  <exec_depend>rosmower_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
