<?xml version="1.0"?>
<package format="2">
  <name>mower_comms</name>
  <version>0.0.0</version>
  <description>The mower_comms package</description>
  <maintainer email="clemens1@familie-elflein.de">Clemens Elflein</maintainer>
  <license>CC BY-NC-SA 4.0</license>

  <url type="website">https://github.com/ClemensElflein/OpenMower</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mower_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_export_depend>mower_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <exec_depend>mower_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
