<?xml version="1.0"?>
<package format="2">
  <name>vesc</name>
  <version>1.0.0</version>
  <description>
    Metapackage of VESC packages.
  </description>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank Corp.</maintainer>
  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <author email="yuki.st16@gmail.com">Yuki Onishi</author>
  <license>Apache License, Version2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>vesc_driver</depend>
  <depend>vesc_msgs</depend>
  <depend>vesc_hi</depend>

  <export>
    <metapackage/>
  </export>
</package>
