<?xml version="1.0"?>
<package>
  <name>vesc_driver</name>
  <version>0.0.1</version>
  <description>
    ROS device driver for the Vedder VESC open source motor driver.
  </description>

  <maintainer email="boulet@ll.mit.edu">Michael T. Boulet</maintainer>
  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/vesc_driver</url>
  <url type="repository">https://github.mit.edu/racecar/vesc</url>
  <url type="bugtracker">https://github.mit.edu/racecar/vesc/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vesc_msgs</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>vesc_msgs</run_depend>
  <run_depend>serial</run_depend>

  <export>
    <nodelet plugin="${prefix}/vesc_driver_nodelet.xml"/>
  </export>

</package>
