<?xml version="1.0"?>
<package format="2">
  <name>vesc_hi</name>
  <version>0.0.1</version>
  <description>VESC hardware interfaces</description>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank Corp.</maintainer>
  <license>Apache License, Version2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>serial</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>vesc_driver</depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>velocity_controllers</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>joint_state_controller</build_depend>
</package>