<?xml version="1.0"?>
<package format="2">
  <name>vesc_hi</name>
  <version>1.0.0</version>
  <description>VESC hardware interfaces</description>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank Corp.</maintainer>
  <author email="yuki.st16@gmail.com">Yuki Onishi</author>
  <license>Apache License, Version2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>serial</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>vesc_driver</depend>

  <exec_depend>position_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
</package>
