<?xml version="1.0"?>
<package format="2">
  <name>xesc_interface</name>
  <version>1.0.0</version>
  <description>
    Common interface for xESC compatible drivers.
  </description>
  <maintainer email="clemens.elflein@gmail.com">Clemens Elflein</maintainer>
  <author email="clemens.elflein@gmail.com">Clemens Elflein</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
