<?xml version="1.0"?>
<package format="2">
  <name>xesc_msgs</name>
  <version>1.0.0</version>
  <description>
    ROS message definitions for VESC open source motor driver.
  </description>
  <maintainer email="clemens1@familie-elflein.de">Clemens Elflein</maintainer>
  <author email="clemens1@familie-elflein.de">Clemens Elflein</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
