<?xml version="1.0"?>
<package format="2">
  <name>xesc_yfr4_driver</name>
  <version>1.0.0</version>
  <description>
    ROS device driver for xESC open source YardForce Rev4 mow-motor adapter driver.
  </description>
  <maintainer email="clemens.elflein@gmail.com">Clemens Elflein</maintainer>
  <author email="clemens.elflein@gmail.com">Clemens Elflein</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>xesc_interface</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>xesc_msgs</depend>
  <depend>serial</depend>

</package>
