<?xml version="1.0"?>
<package format="2">
  <name>mower_analytics</name>
  <version>0.0.1</version>
  <description>OpenMower telemetry — opt-in usage and crash tracking via Sentry</description>
  <maintainer email="clemens@undef.de">Clemens Elflein</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>mower_msgs</depend>
</package>
