<?xml version="1.0"?>
<package format="2">
  <name>mower_logic</name>
  <version>0.0.0</version>
  <description>The mower_logic package</description>
  <maintainer email="clemens1@familie-elflein.de">Clemens Elflein</maintainer>
  <license>CC BY-NC-SA 4.0</license>

  <url type="website">https://github.com/ClemensElflein/OpenMower</url>


  <depend>mower_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>serial</depend>
  <depend>catkin</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
